// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuiltSummarize Render columns 1`] = `
<div>
  <div
    class="root root"
  >
    <div>
      <div
        class="root row"
      >
        <div
          class="inner"
        >
          <div
            class="root column"
          >
            <div
              class="inner"
            >
              <div
                class="path"
              >
                <div
                  id="icon-button"
                >
                  <div
                    id="icon"
                  >
                    settings
                  </div>
                </div>
                <div
                  id="text-field"
                >
                  foo.md
                </div>
              </div>
              <div
                id="icon-button"
              >
                <div
                  id="icon"
                >
                  close
                </div>
              </div>
            </div>
            <div
              class="root vertical divider"
            >
              <div
                class="inner"
              >
                <div
                  id="icon"
                >
                  add
                </div>
              </div>
            </div>
          </div>
          <div
            class="root column"
          >
            <div
              class="inner"
            >
              <div
                class="path"
              >
                <div
                  id="icon-button"
                >
                  <div
                    id="icon"
                  >
                    settings
                  </div>
                </div>
                <div
                  id="text-field"
                >
                  bar.md
                </div>
              </div>
              <div
                id="icon-button"
              >
                <div
                  id="icon"
                >
                  close
                </div>
              </div>
            </div>
            <div
              class="root expanded vertical divider"
            >
              <div
                class="inner"
              >
                <div
                  id="icon"
                >
                  add
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="root expanded horizontal divider"
        >
          <div
            class="inner"
          >
            <div
              id="icon"
            >
              add
            </div>
          </div>
        </div>
      </div>
    </div>
    <p
      class="caption"
    >
      Configuration for quilt_summarize.json. See
       
      <a
        class="root"
        href="https://docs.quilt.bio/quilt-platform-catalog-user/visualizationdashboards#quilt_summarize.json"
        target="_blank"
      >
        the docs
      </a>
    </p>
  </div>
</div>
`;

exports[`QuiltSummarize Render empty placeholders 1`] = `
<div>
  <div
    class="root root"
  >
    <div>
      <div
        class="root row"
      >
        <div
          class="inner"
        >
          <div
            class="root column"
          >
            <div
              class="inner"
            >
              <div
                class="path"
              >
                <div
                  id="icon-button"
                >
                  <div
                    id="icon"
                  >
                    settings
                  </div>
                </div>
                <div
                  id="text-field"
                />
              </div>
              <div
                id="icon-button"
              >
                <div
                  id="icon"
                >
                  close
                </div>
              </div>
            </div>
            <div
              class="root expanded vertical divider"
            >
              <div
                class="inner"
              >
                <div
                  id="icon"
                >
                  add
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="root expanded horizontal divider"
        >
          <div
            class="inner"
          >
            <div
              id="icon"
            >
              add
            </div>
          </div>
        </div>
      </div>
    </div>
    <p
      class="caption"
    >
      Configuration for quilt_summarize.json. See
       
      <a
        class="root"
        href="https://docs.quilt.bio/quilt-platform-catalog-user/visualizationdashboards#quilt_summarize.json"
        target="_blank"
      >
        the docs
      </a>
    </p>
  </div>
</div>
`;

exports[`QuiltSummarize Render row 1`] = `
<div>
  <div
    class="root root"
  >
    <div>
      <div
        class="root row"
      >
        <div
          class="inner"
        >
          <div
            class="root column"
          >
            <div
              class="inner"
            >
              <div
                class="path"
              >
                <div
                  id="icon-button"
                >
                  <div
                    id="icon"
                  >
                    settings
                  </div>
                </div>
                <div
                  id="text-field"
                >
                  foo.md
                </div>
              </div>
              <div
                id="icon-button"
              >
                <div
                  id="icon"
                >
                  close
                </div>
              </div>
            </div>
            <div
              class="root expanded vertical divider"
            >
              <div
                class="inner"
              >
                <div
                  id="icon"
                >
                  add
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="root expanded horizontal divider"
        >
          <div
            class="inner"
          >
            <div
              id="icon"
            >
              add
            </div>
          </div>
        </div>
      </div>
    </div>
    <p
      class="caption"
    >
      Configuration for quilt_summarize.json. See
       
      <a
        class="root"
        href="https://docs.quilt.bio/quilt-platform-catalog-user/visualizationdashboards#quilt_summarize.json"
        target="_blank"
      >
        the docs
      </a>
    </p>
  </div>
</div>
`;
